Deteccion: Apuntes hasta snort

--- a/HFC/DeteccionIntrusos/apuntes/HFC22_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC22_10_2024.md
@@ -1,6 +1,5 @@
 [<- Índice](../DeteccionIntrusos.md)
 # Detección de intrusos
-
 ## Temario
 
 - **Introducción**
@@ -126,6 +125,7 @@ Reformular el paradigma de seguridad defensiva requiere el planteamiento de neuv
 - Monitorización de seguridad en red (*NSM*)
 - Monitorización de seguridad continua (*CSM*)
 
+---
 ## Adversarios/Ataques tradicionales
 
 - **Atacantes oportunistas o aficionados**
@@ -172,8 +172,8 @@ Reformular el paradigma de seguridad defensiva requiere el planteamiento de neuv
 - Persistencia
 - Ocultamiento
 
+---
 # Detección de Intrusos de Red
-
 ## Técnicas de detección de red
 
 Es posible detectar intrusos mediante el análisis de:
@@ -213,9 +213,11 @@ Para este tipo de análisis se consideran los siguientes conceptos clave:
 
 Aqui anotaré algunas definiciones sobre herramientas utilizadas en el ámbito de ciberseguridad enfocada en defensa que estaremos utilizando a lo largo de este curso.
 
-***SIEMS***: (*Security Information and Event Management*) el objetivo principal de un *SIEM* es ==centralizar la recopilación, almacenamiento y análisis de logs o registros de eventos de seguridad== generados por diversos sistemas, dispositivos y aplicaciones de una organización
+***SIEM***: (*Security Information and Event Management*) el objetivo principal de un *SIEM* es ==centralizar la recopilación, almacenamiento y análisis de logs o registros de eventos de seguridad== generados por diversos sistemas, dispositivos y aplicaciones de una organización
 
 El objetivo principal es ==detectar comportamientos sospechosos o maliciosos en tiempo real==.
+
+***MFA***: (*Multifactor Authentication*) Es un método de seguridad que ==requiere que los usuarios proporcionen 2 o más formas de verificación== antes de acceder al sistema, añadiendo capas adicionales de protección al sistema.
 
 # Enlaces
 
