--- a/HFC/DeteccionIntrusos/apuntes/HFC23_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC23_10_2024.md
@@ -23,7 +23,7 @@ Contiene datos como:
 
 A pesar de que ==*NetFlow* es el protocolo estándar para empaquetar flujos de datos==, puede ser algo pesado para dispositivos antiguos por lo que se utiliza *sFlow* en estos casos.
 
-## IPFIX/Netflow
+### IPFIX/Netflow
 
 > *IPFIX* (*Internet Protocol Flow Information Export*) es un estándar avanzado desarrollado para la exportación de información sobre los flujos de tráfico de redes.
 
@@ -47,7 +47,7 @@ Los flujos de datos permiten tanto la ==detección== como la ==prevención== de 
 
 # Dispositivos de Red
 
-A continuación detallaré los dispositivos de red más destacados que nos aportan valiosas características de defensa en el ámbito de la ciberseguridad
+A lo largo de las clases estudiaremos los dispositivos de red más destacados que aportan valiosas características de defensa en la red.
 
 - *Routers*
 - *Perimeter SI Firewall*
@@ -76,13 +76,13 @@ A continuación detallaré los dispositivos de red más destacados que nos aport
 Ahora que sabemos las principales características de un *Router*, proporcionemos un ejemplo de un pequeño análisis de visibilidad a ellos para el caso específico de un **Ataque de Inyección SQL**.
 
 ---
-#### Ejemplo SQL Injection - Router
+#### Análisis de Visibilidad: SQL Injection
 
 ##### ==Detección==
 
 **Detección de ataques**: ***FALLA*** pues todo parece tráfico legítimo para el servidor
 
-**Detección de exfiltración**: ***Posible éxito***. El comportamiento tendría que activar detectores personalizados de anomalías debido al volumen/destino.
+**Detección de exfiltración**: ***Posible éxito***. El comportamiento podría activar detectores personalizados de anomalías dado su volumen/destino.
 
 ##### ==Prevención==
 
@@ -95,9 +95,9 @@ Ahora que sabemos las principales características de un *Router*, proporcionemo
 **Prevención de exfiltración**: ***ÉXITO***, si la ruta de exfiltración elegida no es un servicio permitido (o está bloqueado)
 
 ---
-#### Ejemplo Watering Hole - Router
+#### Análisis de Visibilidad: Watering Hole
 
-##### Detección
+##### ==Detección==
 
 **Detección de ataques**: ***FALLA***, sin visibilidad en capa 7
 
@@ -106,18 +106,42 @@ Ahora que sabemos las principales características de un *Router*, proporcionemo
 **Detección de Pivoting**: ***FALLA***, sin visibilidad interna
 **Detección de exfiltracion**: ***Éxito***, si el servicio no es de confianza o si el destino activa alertas de reputación.
 
-## Perimeter Security Information Firewall
+## Perimeter Stateful Inpection Firewall
 
-> Comúnmente llamado **Firewall Perimetral**, es un dispositivo diseñado para supervisar, controlar y filtrar el tráfico entrante y saliente basado en políticas de seguridad predefinidas.
+> Comúnmente llamado **Perimeter SI Firewall**, es un dispositivo diseñado para supervisar, controlar y filtrar el tráfico entrante y saliente basado en sus *estados* y políticas de seguridad predefinidas.
 
-La mayoría de los *Firewall* Perimetrales modernos utilizan inspección de estado, lo que significa que rastrean el estado de las conexiones activas para permitir solo respuestas legítimas (por asi decir, "coherentes").
+- Es el primer dispositivo de seguridad en la red interna.
 
-> Es decir, el *Firewall* Perimetral intenta entender si un paquete en inspección está directamente relacionado con el tráfico anterior
+- Su principal objetivo es ==filtrar los datos antes de que lleguen a filtros posteriores== de seguridad, mediante capacidades como:
 
-Para algunos protocolos, esto es bastante simple y directo en circunstancias normales
+	- Bloqueo (por defecto) de tráfico entrante.
+	- Filtrado de tráfico entrante en capa de red y de transporte.
+	- Bloqueo (por defecto) de tráfico saliente.
+	- Filtrado de tráfico saliente en capa de red y de transporte.
 
-- Filtrado en la capa de red para tráfico entrante
-- Filtrado en la capa de red para tráfico saliente
+- A diferencia del *Router*, este dispositivo **si** está hecho para filtrar:
+	- Además debe redirigir los bloqueos y detecciones del *Router*
+	
+- Posee más alcance de filtrado que el *Router*
+
+#### ¿Qué significa *stateful*?
+
+> El *Firewall* Perimetral intenta entender si un paquete en inspección está directamente relacionado (es coherente) con el tráfico anterior.
+
+Para algunos protocolos es una tarea sencilla, sin embargo para protocolos más complejos o para ciertos patrones de tráfico puede resultar mucho más problemático.
+
+Por ejemplo, los *Firewall*'s estáticos (no-*Stateful*) comúnes, para tráfico *TCP*, solían simplemente buscar la bandera *ACK*.
+Si se encontraba, se asumía que el tráfico era parte de una conexión previamente establecida.
+
+### Análisis de Visibilidad: Watering Hole (Client-Side)
+
+***Prevención del ataque inicial***: ==**FALLA**==, pues la navegación web y el uso de correo electrónico son normales y permitidos, ya que no posee visibilidad en capa de aplicación.
+
+***Prevención de comando y control***: ==**Posible éxito**==, pues dada la configuración del *Firewall*, podría bloquearse por defecto el tráfico saliente. Sin embargo, inclusive así los actores de amenaza podrían arreglarselas para establecer el canal.
+
+***Prevención de movimiento lateral***: ==**FALLA**==, pues no tenemos visibilidad a la red interna.
+
+***Prevención de exfiltración***: ==**Posible éxito**==, si la ruta de exfiltración no es bloqueada por el *Firewall*, sin embargo, los adversarios se las pueden arreglar de igual manera para exfiltrar la información por una ruta permitida.
 
 ## Web Application Firewall (WAF)
 
@@ -127,26 +151,53 @@ Cabe recalcar que un *WAF* requiere de mucho mantenimiento y conocimiento para a
 
 > A diferencia de un *Firewall* tradicional, un *WAF* se enfoca en proteger específicamente aplicaciones web de ataques comunes que explotan vulnerabilidades en la ==capa de aplicación==.
 
-==Se destacan especialmente por su capacidad de realizar **Patching Virtual**==, una técnica que permite proteger sistemas sin tener que modificar el código subyacente de inmediato.
+Las herramientas tradicionales como *IPS*, *IDS*, *Firewalls* e incluso *Next Generation Firewall* resultan fuertemente ineficaces en proteger aplicaciones *web* personalizadas, tanto en detección como en prevención de ataques.
 
-El **Patching Virtual** por supuesto es una manera rápida y fácil de solucionar problemas que requieren de nuestra atención inmediata, sin embargo no debe considerarse una definición definitiva o a largo plazo.
+==Se destacan también por su capacidad de realizar **Patching Virtual**==, una técnica que permite proteger sistemas sin tener que modificar el código subyacente de inmediato.
+
+El **Patching Virtual**, por supuesto, es una manera rápida y fácil de solucionar problemas que requieren de nuestra atención inmediata, sin embargo no debe considerarse una definición definitiva o a largo plazo.
+
+==Muchos despliegues de *WAF* son configurados como *Proxies* inversos y se situan en frente de los servidores *web*==, una pocisión muy adecuada para visibilizar todo el tráfico de la aplicación *web*.
 
 ---
-## Interfaz de red
-#### Modos de interfaz de red
+## Modos de interfaz de red
 
-**Modo normal**: Captura únicamente los paquetes que tengan como destino a si misma.
+Para el uso posterior en este curso, hay que tomar en cuenta los 2 modos que poseen las interfaces de red:
 
-**Modo promiscuo/monitor**: Captura todos los paquetes que pueda
+**Modo normal**: Captura únicamente los paquetes dirigidos al equipo, todos los demás paquetes son ignorados.
+
+**Modo promiscuo/monitor**: Captura todos los paquetes de la red en la que esta conectada.
+
+Para habilitar este modo en una interfaz podemos ejecutar el siguiente comando remplazando con el nombre de la términal que deseas habilitar en este modo:
+
+```bash
+sudo ifconfig [interfaz] promisc up
+```
 
 ---
 ## Herramientas para captura y análisis de tráfico de red
+
+Hacemos una breve mención de herramientas que pueden realizar capturas y análisis del tráfico de red:
 
 - *TCPDump*
 - *WinDump*
 - *WireShark*
 - *Kismet*
 - *Snort*
+
+Particularmente, para ***TCPDump***, la salida se organiza en filas de 8 bloques de 4 números en hexadecimal.
+
+Como 2 números en hexadecimal, representan un *byte* (8 *bits*), también podemos decir que cada fila se compone de 16 *bytes*:
+
+```
+0x0000:   4500  003c  6e56  4000  4006  2b52  ac10  f384
+0x0010:   84f8  7c86  c2bb  0050  d42a  03ec  0000  0000
+0x0020:   ...
+```
+
+También cabe mencionar que una palabra en **TCPDump** (*dword*) esta compuesta de 4 *bytes* o 32 *bits*.
+
+Entonces, igualmente es correcto decir que cada fila tiene 4 palabras.
 
 # Enlaces
 
