--- a/HFC/DeteccionIntrusos/apuntes/HFC28_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC28_10_2024.md
@@ -1,9 +1,9 @@
-Tipos de datos:
+[<- Índice](../DeteccionIntrusos.md)
+### Tipos de datos por analizar
 
 - Estadisticos
 - Flujos
 - Contenido completo
-
 - Alerta
 
 ## Proxy
@@ -26,4 +26,6 @@ Existen varias opciones para configurar el tráfico de los clientes para que pas
 
 > Otro enfoque común para restringir interacciones potencialmente dañinas en Internet es examinar los tipos MIME (*Content-Type*) de las peticiones *HTTP*.
 
-- [x] Instalar WAZUH
+# Enlaces
+
+[<- Anterior](HFC24_10_2024.md) | [Siguiente ->](HFC29_10_2024.md)
