--- a/HFC/DeteccionIntrusos/apuntes/HFC29_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC29_10_2024.md
@@ -104,3 +104,7 @@ Esta *whitelist* puede realizarse utilizando varios enfoques:
 - *Hash MD5*
 - *Hash SHA-256*
 - *Firmas*
+
+# Enlaces
+
+[<- Anterior](HFC28_10_2024.md)
