--- a/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
@@ -1,10 +1,10 @@
 [<- Índice](../DeteccionIntrusos.md)
-## Ejercicio 2 - Análisis de contenido completo
+### Ejercicio 2 - Análisis de contenido completo
 
 #### Hallazgos del análisis
 
-- En la red se utiliza mucho *UDP*
-- Una comunicación de 10.42.0.8 a 52..2.229.189 con muchos bytes transferidos (222 kb)
+- En la red se utilizó mucho *UDP*
+- Una comunicación de 10.42.0.8 a 52.2.229.189 con muchos bytes transferidos (222 kb)
 - La IP 10.42.0.8 tuvo mucha más actividad que su contraparte
 - Tamaño de paquetes de 160 a 319
 
@@ -13,10 +13,11 @@
 > Es una ==herramienta de seguridad que monitorea el tráfico de red y/o los eventos de un sistema para identificar actividades sospechosas== o posibles ataques mediante la ==definición de reglas==.
 
 De acuerdo a las técnicas de análisis de datos se pueden clasificar como:
-- Basado en Anomalías (*Whitelist*)
-- Basado en patrones (*Blacklist*)
 
-### Detección basada en anomalías
+- Basado en anomalías
+- Basado en patrones o firmas
+
+### Detección basada en anomalías (Whitelist)
 
 > Consiste en el análisis de tráfico de red para reportar comportamiento anómalo o inusual respecto a los patrones de tráfico normal para una red.
 
@@ -26,8 +27,7 @@ Existen 3 principales técnicas para detectar una anomalía:
 - **Base de conocimiento**: Según las convenciones y reglas de los usos de los protocolos
 - **Aprendizaje automatizado**: Con técnicas que intentan imitar un aprendizaje de las anomalías adecuadas
 
-
-Requiere de una base inicial de comportamiento
+> Requiere de una base inicial de comportamiento, es decir, necesitamos datos estadísticos o algo con que realizar la comparación de lo bueno y lo malo.
 
 - Tiempo finito
 - Detección de desviaciones
@@ -36,15 +36,17 @@ Requiere de una base inicial de comportamiento
 	- Basadas en *RFC*
 	- Requiere de bases de conocimiento
 
-El propósito es analizar, entender y caracterizar el comportamiento del tráfico de red, permitiendo el tráfico que no sea considerado anómalo
+Desde un punto de vista más rígido, ==la detección de anomalías es considerada un problema de clasificación==.
 
-### Detección basadas en firmas
+### Detección basadas en firmas (Blacklist)
 
-- Consiste en la creación de patrones específicos de tráfico anómalo o malicioso previamente conocido
-- La detección se realiza cuando el tráfico analizado coincide con algún patron previamente creado
-- La mayoria de las firmas buscan patrones en el *payload* y no en las cabeceras de las capas de red.
+> Consiste en la creación de patrones específicos de tráfico anómalo o malicioso previamente conocido
 
-- Este método falla ante nuevos ataques, porque *NIDS* no cuenta aún con firmas que detecten estos patrones
+Entonces, la detección se realiza cuando el tráfico analizado coincide con algún patron previamente creado.
+
+La mayoria de las firmas consisten en patrones reconocidos como maliciosos hallados en el *payload*, como *exploits*, *exfiltraciones*, ciertas cadenas, etc.
+
+> ==Este método falla ante nuevos ataques==, porque *NIDS* no cuenta aún con firmas que detecten estos patrones
 
 **Herramientas**:
 - ==Snort==, Suricata
@@ -52,7 +54,7 @@ El propósito es analizar, entender y caracterizar el comportamiento del tráfic
 
 ## NIDS
 
-> Un *NIDS* es un *IDS* enfocado principalmente para el monitoreo y seguridad de una red, suele colocarse en puntos estratégicos de la red que faciliten su defensa.
+> Un *NIDS* es un *IDS* enfocado principalmente para el monitoreo y seguridad de una ***red***, suele colocarse en puntos estratégicos de la red que faciliten su defensa.
 
 En este curso nos enfocamos principalmente en ***Snort*** como *NIDS* y como definir reglas en este.
 
@@ -60,22 +62,25 @@ En este curso nos enfocamos principalmente en ***Snort*** como *NIDS* y como def
 
 > Las reglas definen lo que *Snort* debe buscar en los paquetes de red y como debe actuar al encontrarlo
 
-Alternativamente, definen quién y qué constituye un ataque o actividad sospechosa para nuestra red.
+Definen quién y qué constituye un ataque o actividad sospechosa para nuestra red.
 
-==Inspeccionan cabeceras y datos==.
+==Inspeccionan cabeceras y datos del paquete==.
 
 Las reglas se dividen en 2 secciones:
 - **Cabecera de la regla**
 - **Opciones de la regla**
 
-Cada una utiliza una sintaxis diferente
+Cada una utiliza una sintaxis diferente.
 
-La **cabecera** de la regla es totalmente **obligatoria**.
+> La **cabecera** de la regla es totalmente **obligatoria** y contiene la información de red para detectar los paquetes, además de la acción a realizar.
 
 Existen ciertas opciones **obligatorias** para el correcto funcionamiento de la regla, sin embargo idealmente son, redundantemente, opcionales.
 
+> Además estas opciones contienen el mensaje de alerta e información de cómo realizar la inspección del paquete.
+
 ```snort
-alert tcp $EXTERNAL_NET any -> $HOME_NET any / (msg:"mensaje"; / content:"GET" / ..)
+alert tcp $EXTERNAL_NET any -> $HOME_NET any / (msg:"Escaneo ping con nmap";flags:A;ack:0; /
+classtype:attempted-recon; sid:628;)
 ```
 
 La **cabecera** esta principalmente constituida por:
@@ -84,10 +89,17 @@ La **cabecera** esta principalmente constituida por:
 2. Protocolo
 3. Dirección IP origen
 4. Puerto origen
-5. `->`
+5. Dirección: `->` (Puede ser `<-` p `<>` también)
 6. Dirección IP destino
 7. Puerto destino
 
+#### Acciones de la regla
+
+- ***alert***: Genera una alerta y después registra el paquete.
+- ***log***: Únicamente registra el paquete.
+- ***pass***: Ignora el paquete.
+- ***activate***: Genera una alerta y activa otra regla.
+
 # Enlaces
 
-[<- Anterior](HFC23_10_2024.md) |
+[<- Anterior](HFC23_10_2024.md) | [Siguiente ->](HFC28_10_2024.md)
