DeteccionIntrusos: Guia de snort 3 completa

--- a/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
@@ -56,50 +56,20 @@ La mayoria de las firmas consisten en patrones reconocidos como maliciosos halla
 
 > Un *NIDS* es un *IDS* enfocado principalmente para el monitoreo y seguridad de una ***red***, suele colocarse en puntos estratégicos de la red que faciliten su defensa.
 
-En este curso nos enfocamos principalmente en ***Snort*** como *NIDS* y como definir reglas en este.
+Busca detectar anomalías tales como ataques de denegación de servicios, escaneadores de puertos o intentos de entrar en un ordenador, todo en ==tiempo real==.
 
-### Reglas de Snort
+Es importante mencionar que el *NIDS* no cuenta con ninguna capacidad preventiva, unicamente detecta y lanza una alerta que debe ser interpretada y respondida adecuadamente por la persona responsable.
 
-> Las reglas definen lo que *Snort* debe buscar en los paquetes de red y como debe actuar al encontrarlo
+## NIPS
 
-Definen quién y qué constituye un ataque o actividad sospechosa para nuestra red.
+Se refiere a un Sistema de Prevención de Intrusos en Red, similar a un *NIDS* pero con capacidades preventivas, es decir, puede tomar acciones activas para bloquear o mitigar las amenazas que detecte..
 
-==Inspeccionan cabeceras y datos del paquete==.
+> Es una categoría de sistemas de seguridad diseñados  para examinar el tráfico de red en busca de actividades maliciosas o no autorizadas, y tomar medidas para prevenir o bloquear estas actividades en tiempo real.
 
-Las reglas se dividen en 2 secciones:
-- **Cabecera de la regla**
-- **Opciones de la regla**
+Utiliza técnicas como inspección profunda de paquetes, análisis de anomalías, correlación de eventos y aplicación de reglas o plíticas de seguridad.
 
-Cada una utiliza una sintaxis diferente.
-
-> La **cabecera** de la regla es totalmente **obligatoria** y contiene la información de red para detectar los paquetes, además de la acción a realizar.
-
-Existen ciertas opciones **obligatorias** para el correcto funcionamiento de la regla, sin embargo idealmente son, redundantemente, opcionales.
-
-> Además estas opciones contienen el mensaje de alerta e información de cómo realizar la inspección del paquete.
-
-```snort
-alert tcp $EXTERNAL_NET any -> $HOME_NET any / (msg:"Escaneo ping con nmap";flags:A;ack:0; /
-classtype:attempted-recon; sid:628;)
-```
-
-La **cabecera** esta principalmente constituida por:
-
-1. Acción de la regla
-2. Protocolo
-3. Dirección IP origen
-4. Puerto origen
-5. Dirección: `->` (Puede ser `<-` p `<>` también)
-6. Dirección IP destino
-7. Puerto destino
-
-#### Acciones de la regla
-
-- ***alert***: Genera una alerta y después registra el paquete.
-- ***log***: Únicamente registra el paquete.
-- ***pass***: Ignora el paquete.
-- ***activate***: Genera una alerta y activa otra regla.
+En este curso nos enfocamos principalmente en ***Snort*** como *NIPS* y como definir reglas en este.
 
 # Enlaces
 
-[<- Anterior](HFC23_10_2024.md) | [Siguiente ->](HFC28_10_2024.md)
+[<- Anterior](HFC23_10_2024.md) | [Siguiente ->](HFC25_10_2024.md)
