--- a/HFC/DeteccionIntrusos/apuntes/HFC28_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC28_10_2024.md
@@ -8,24 +8,41 @@
 
 ## Proxy
 
-> Los *proxies* avanzados representan una capacidad clave de prevención y detección que ha estado disponible durante numerosos años.
+> Los *proxies* avanzados representan un dispositivo clave de prevención y detección que ha estado disponible desde hace numerosos años.
 
-Estos dispositivos están adecuadamente posicionados para ver y potencialmente frustrar la explotación del lado del cliente, así como tráfico de *C2*.
+Estos dispositivos están adecuadamente posicionados para ver y potencialmente frustrar la explotación del lado del cliente (*Watering Hole*), así como tráfico de *C2*.
 
-Pueden detectar y prevenir la exfiltración de datos.
+Además son dispositivos ==bien posicionados== en la red para ayudar a identificar comportamientos anómalos o violaciones de reglas.
 
-Sirve mucho para la detección de tráfico anómalo.
+Por supuesto, es muy valioso para la ==detección y prevención de exfiltración de datos==.
+
+Otro uso potencial de un *Proxy*, consiste en la ==identificación de patrones anómalos de tráfico de red==.
 
 > Idealmente **cualquier** conexión iniciada desde dentro de la organización debería requerir atravesar el proxy.
 
-Deberiamos forzar todas las comunicaciones a través del *proxy*, crea un punto de estrangulación increíblemente útil tanto para capacidades de prevención como detección.
+Forzar todas las comunicaciones a través del *proxy*, crea un punto de concentración increíblemente útil tanto para capacidades de prevención como detección.
+
+Además el *Proxy* puede procesar el contenido completo del paquete, lo que provee una ==gran visibilidad sobre la capa de aplicación==.
 
 Existen varias opciones para configurar el tráfico de los clientes para que pase por el proxy:
 
 - Configuración manual de navegadores
+- Archivos de autoconfiguración del *Proxy* (*PAC*)
+- *WPAD (Web Proxy Autodiscovery Protocol)*, aunque presenta algunos problemas.
+
+## Filtros de contenido web
+
+> Algunas veces es una medida de seguridad en si misma, aunque muchas otras veces es una característica ofrecida por otra herramientas como *Next Generation Firewall*'s o *Proxies*.
+
+Los **filtros de contenido web** han sido usados desde hace tiempo por las organizaciones con la intención de controlar el tráfico *web* de sus usuarios.
+Al aplicarlos se busca:
+
+- Limitar la exposición a sitios maliciosos
+- Limitar la descarga/carga de archivos
+- Incrementar la productividad del usuairo
 
 > Otro enfoque común para restringir interacciones potencialmente dañinas en Internet es examinar los tipos MIME (*Content-Type*) de las peticiones *HTTP*.
 
 # Enlaces
 
-[<- Anterior](HFC24_10_2024.md) | [Siguiente ->](HFC29_10_2024.md)
+[<- Anterior](HFC25_10_2024.md) | [Siguiente ->](HFC29_10_2024.md)
