Deteccion: Apuntes Endpoints

--- a/HFC/DeteccionIntrusos/apuntes/HFC25_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC25_10_2024.md
@@ -28,12 +28,9 @@ Las reglas se dividen en 2 secciones:
 ```rules
 # Ejemplo de una regla bien escrita de Snort 3
 
-alert tcp $EXTERNAL_NET any -> $HOME_NET 80
+alert tcp $EXTERNAL_NET any -> $HOME_NET any
 (
-	msg:"Escaneo ping con nmap";
-	flags:A;
-	ack:0;
-	classtype:attempted-recon;
+	msg:"Trafico entrante";
 	sid:1000000;
 )
 ```
@@ -261,19 +258,30 @@ Los siguientes modos de alerta son no pueden redirigirse a un archivo y son:
 
 > Con todo esto deberíamos de tener lo más funcional posible la herramienta, de modo que solo queda experimentar con la creación de reglas.
 
-Por ejemplo, con algo de investigación, hice esta regla para detectar una solictud ping *ICMP* a mi celular.
+Por ejemplo, con algo de investigación, hice esta regla para detectar una solictud ping *ICMP* a mi computadora.
 
 ```rules
 alert icmp $EXTERNAL_NET any -> 192.168.99.137 any
 (
-msg:"Ping a mi celular";
+msg:"Ping a mi computadora";
 icode:=0;
 itype:=8;
 sid:1000001;
 )
 ```
 
-Para terminar, si te dispones a escribir más reglas, no olvides revisar la documentación disponible en https://docs.snort.org/welcome pues incluye toda la explicación detallada sobre las reglas y sus opciones.
+Y esta para buscar la palabra *"password"* en el contenido del paquete:
+
+```rules
+alert tcp $HOME_NET any -> $EXTERNAL_NET any
+(
+msg:"Posible exfiltración";
+content:"password",nocase;
+sid:1000001;
+)
+```
+
+> Para terminar, si te dispones a escribir más reglas, no olvides revisar la documentación disponible en https://docs.snort.org/welcome pues incluye toda la explicación detallada sobre las reglas y sus opciones.
 
 Tampoco olvides, como buen proyecto de código libre, existe un recopilado de las reglas más utilizadas y mantenidas por la comunidad disponible en la página o con el comando:
 
