--- a/HFC/DeteccionIntrusos/apuntes/HFC29_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC29_10_2024.md
@@ -1,36 +1,53 @@
 [<- Índice](../DeteccionIntrusos.md)
 # Más herramientas  
 
-## Next Generation Firewall
+## Next Generation Firewall (NGFW)
 
-Algunos han considerado erróneamente que los *NIPS* son un paso evolutivo más allá de los *NIDS*.
+> Un *Next Generation Firewall* es un dispositivo diseñado para ofrecer protección más robusta frente a amenazas modernas y complejas, cappaz de prevenir y detectar intrusiones, analizar la capa de aplicación y generar informes o registros avanzados.
 
-Los *NIPS* están mucho más alineados a los *NGFW*
+Ya hemos presentado antes a los *Perimeter SI Firewall*, sin embargo, ¿porqué distinguimos a los *NGFW* de estos?
+
+Es importante diferenciarlos porque ninguno es mejor que otro, si no que ambos se complementan y son necesarios para la seguridad de la organización.
+
+> Además, la diferencia principal contra un *Firewall Perimeter SI*, es que, como mencioné anteriormente, estos poseen visibilidad en la capa de aplicación, similar a un *WAF* solo que no se limitan únicamente a aplicaciones web.
+
+Algunos han considerado erróneamente que los *NIPS* son un paso evolutivo más allá de los *NIDS*, e incluso que estos últimos quedarían obsoletos.
+Sin embargo, los *NIPS* están mucho más alineados a los *NGFW*.
 
 Muchas organizaciones han integrado la funcionalidad de *NIPS* en sus dispositivos *NGFW* em lugar de requerir dispositivos *NIPS* independientes
 
-La diferencia contra un *Firewall Perimeter SI*,
-
 ## DNS
 
-> *"El DNS es el pegamento que mantiene unido a Internet"*
+> A estas alturas ya tenemos una muy buena noción de lo que es un *DNS*, por lo que solo ahondaré en su importancia.
 
-Prácticamente todos los controles de red utilizan el *DNS* de alguna manera
+Prácticamente todos los controles de red utilizan el *DNS* de alguna manera, es de los servicios más requeridos, y para los dispositivos de seguridad no es distinto.
 
 > ***La seguridad del DNS es primordial***
 
-El control hostil de los servidores o zonas *DNS* de una organización representa un riesgo potencial.
+El control hostil de los servidores o zonas *DNS* de una organización representa un riesgo enormemente potencial.
 
-Roles
-
-- DNS autoritativo
-- DNS recursivo
+Los *DNS* principalmente se dividen en 2 tipos:
 
 #### DNS autoritativo
 
+> Es un tipo de servidor *DNS* que tiene la autoridad para proporcionar respuestas definitivas sobre un dominio en específico.
+
+Es decir, tiene la información legítima y más actualizada sobre los registros *DNS* del dominio solicitado.
+
+Sabemos que existen múltiples servidores *DNS* en Internet, por lo que al realizar una consulta a nuestro servidor *DNS* más cercano, revisara el caché de sus consultas y de ser posible nos dará una respuesta inmediata, pero ***no autoritativa***.
+
+Se dice ***no autoritativa*** porque no posee de primera mano la respuesta, si no que es información que almacenó en algún momento por alguna consulta previa y que incluso obtuvo de otro *DNS* cercano, posiblemente, de forma ***no autoritativa***.
+
 #### DNS recursivo
 
+> Los *DNS* recursivos son los intermediarios entre los usuarios y los *DNS* autoritativos.
+
+En contraste con los autoritativos, son todos aquellos servidores que no poseen la información legítima y deben obtenerla de algun otro servidor *DNS*.
+
+Para evitar realizar múltiples consultas, almacenan muchas respuestas como caché, para comodidad de sus usuarios y de otros *DNS* que puedan requerir esa misma información.
+
 ---
+
 Enfocandonos en la ciberseguridad, el *malware*, como la mayoría del *software* de red, utiliza *DNS* para resolver direcciones IP a nombres de dominios y viceversa.
 
 Tomando eso en cuenta, se debe monitorear lo siguiente:
@@ -43,34 +60,56 @@ Tomando eso en cuenta, se debe monitorear lo siguiente:
 - Solicitudes a dominios jóvenes (registrados recientemente)
 
 **DNS, el canal ideal de C2 (Comando y control)**
-- Subredes internas bloqueadas "sin acceso a internet" a menudo permiten la resolución *DNS* pública.
-- Los túneles *DNS* son muchos más dificiles de mitigar a través de controles preventivos.
+
+- Subredes internas bloqueadas "sin acceso a internet" a menudo permiten la resolución *DNS* pública. Esto resulta en una fomra viable de salida para un atacante.
+
+- Los túneles *DNS* son muchos más dificiles de mitigar a través de controles preventivos. Pues no es un uso esperable o convencional de estos servidores.
 
 # Detección de Intrusos en Dispositivos Finales (Endpoints)
 
-### Controles CIS para la arquitectura de seguridad de puntos
+Es un componente esencial de la ciberseguridad que se centra en monitorizar y proteger dispositivos finales como computadoras, laptops, servidores contra actividades maliciosas.
 
-1. Monitoreo y control de aplicaciones
-2. Configuraciones seguras de archivos empresariales
-3. Parches rapidos de aplicaciones
-4. Parches rapidos de sistema operativos
+> La importancia de una arquitectura robusta de seguridad para los dispositivos finales no debe ser subestimada.
 
-#### Escritorios
+Al final del día, buscamos proteger información, muchas veces situada en los dispositivos finales.
+
+Este tipo de detección se basa en un ***monitoreo continuo*** de los equipos, ***análisis de registros***, ***alertas de anomalías*** y más.
+
+### Controles para la arquitectura de seguridad de dispositivos finales
+
+1. Monitoreo y control de aplicaciones.
+2. Configuraciones seguras de archivos empresariales.
+3. Parches rapidos de aplicaciones.
+4. Parches rapidos de sistema operativos.
+5. Control de acceso a los recursos.
+
+### Windows
+
+Ciertamente hay muchos sistemas operativos que necesitan de estas herramientas de Ciberseguridad, sin embargo, para este curso solo nos enfocaremos en *Windows*.
+
+> *Windows* sigue siendo el sistema operativo predominante de las grandes empresas.
+
+Por esta misma razón, *Windows* sigue siendo el objetivo número 1 de los atacantes.
+
+Además muchos principios de defensa de *Windows* son aplicables a otros sistemas operativos si son adecuados correctamente (lo cual no siempre es fácil).
+
+### Escritorios
 
 > *"Las computadoras de escritorio son mucho más dificiles de asegurar que los servidores."*
 
-Esto se debe a que los usuarios son impredecibles, a veces malintencionados. Además más fáciles de alcanzar para los adversarios
+Esto se debe a que los usuarios son impredecibles, a veces malintencionados. Además de ser equipos más fáciles de alcanzar para los adversarios.
 
-> Si puedes asegurar una computadora de escritorio, entonces deberías poder asegurar un sistema operativo de servidor sin cabeza y de un solo propósito.
+> *"Si puedes proteger una computadora de escritorio, entonces deberías poder proteger un servidor, sin usuarios, y de un solo propósito sin ningún problema."*
 
 ### Construyendo una configuración base
 
 Varios objetivos para la configuración base son:
 
-- Determinan un putno de partida razonable seguro para las configuraciones de los sistemas.
+- Determinan un punto de partida razonable seguro para las configuraciones de los sistemas.
+
 - Establecer una configuración consistente en la mayoría de los sistemas.
 
-El impacto de una configuración base es significativo, por lo que se debe dedicar mucho tiempo y cuidado durante su elaboración.
+El impacto de una configuración base es significativo, por lo que se debe dedicar mucho tiempo y cuidado durante su elaboración para ahorrar muchos problemas.
 
 ### Monitoreo de los cambios en la configuración base
 
@@ -78,21 +117,20 @@ Una herramienta extremadamente importante para una defensa cibernética sólida 
 
 Se busca:
 
-- Observar aspectos claves de la configuración del sistema a lo largo del tiempo y analizar esos cambios
+- Observar cambios claves de la configuración del sistema a lo largo del tiempo y analizar esos cambios.
+- Buscar cambios relevantes a la seguridad o que faciliten un compromiso.
 
 ### Control y Monitorización de las Aplicaciones
 
 Este es uno de los mejores controles para puntos finales
 
-Para los sitios que no han implementado control de aplicaciones, monitorear el uso de aplicaciones en sistemas cŕiticos (*endpoints*) es fundamental.
+> Para los sitios que no han implementado control de aplicaciones, monitorear el uso de aplicaciones en sistemas cŕiticos (*endpoints*) es fundamental.
 
 Muchos ataques de *malware* implican colocar binarios en los sistemas y ejecutarlas. Por ejemplo *Mimikatz* es un ejemplo notable.
 
 ### Control de la aplicación
 
-Un elemento de la sección anterior se centró en el inventario de *software*.
-
-Si sabemos que *software* ha sido confirmado como autorizado, podemos buscar desviaciones
+Si sabemos que *software* ha sido confirmado como autorizado, podemos buscar desviaciones de estos.
 
 Dadas estas necesidades, se busca la implementación de una *safelist* que indique que aplicaciones son seguras para instalar y ejecutar
 
@@ -103,8 +141,29 @@ Esta *whitelist* puede realizarse utilizando varios enfoques:
 - *Publicador*
 - *Hash MD5*
 - *Hash SHA-256*
-- *Firmas*
+- *Firmas digitales*
+
+Es importante escoger un enfoque adecuado e implementarlo cuidadosamente pues puede tener serias implicaciones de seguridad.
+
+### Monitoreo de cuentas privilegiadas
+
+> Las cuentas privilegiadas on necesarias en una organización, loq ue implica que también serán necesariamente atacadas.
+
+Se debe monitorear con cuidado:
+
+- Cuentas portando privilegios que no deberían.
+- Cuentas a las que se les autorice recientemente estos privilegios.
+
+Son particularmente peligrosos, y necesarios de monitorear, privilegios como:
+
+- Depurar programas
+- Impersonar a otro usuario
+- Hacerse pasar por un componente del sistema operativo
+- Crear tokens de autenticación
+- Cargar *drivers* al sistema
+- Apropiarse (designar como usuario propietario) de recursos
+- Restaurar archivos o directorios
 
 # Enlaces
 
-[<- Anterior](HFC28_10_2024.md)
+[<- Anterior](HFC28_10_2024.md) |
